Fix sign in spacing error on md size sign up page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1365,8 +1365,8 @@ html.dark {
 
 html {
   --text-color: #1a162e;
-  --icon-color: brightness(0) saturate(100%) invert(8%) sepia(10%) saturate(4042%) hue-rotate(212deg) brightness(90%)
-      contrast(95%);
+  --icon-color: brightness(0) saturate(100%) invert(8%) sepia(10%)
+    saturate(4042%) hue-rotate(212deg) brightness(90%) contrast(95%);
   --body-bg: #f6f6f6;
   --header-bg-color: #eee;
   --footer-bg-color: var(--header-bg-color);
@@ -1399,6 +1399,11 @@ html {
 @media (max-width: 767.98px) {
   html {
     --cate-item-bg: #fff;
+  }
+}
+@media (max-width: 767.98px) {
+  html {
+    --auth-intro-bg: #fff;
   }
 }
 
@@ -2537,6 +2542,11 @@ html {
 .form__group {
   margin-top: 30px;
 }
+@media (max-width: 767.98px) {
+  .form__group {
+    margin-top: 20px;
+  }
+}
 .form__group--inline {
   display: flex;
   align-items: center;
@@ -2696,6 +2706,7 @@ html {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background: var(--auth-intro-bg);
   gap: 50px;
 }
 .auth__intro-logo, .auth__intro-next {
@@ -2748,6 +2759,11 @@ html {
   margin: 0 auto;
   padding: 50px 0;
 }
+@media (max-width: 767.98px) {
+  .auth__content-inner {
+    padding: 30px 0;
+  }
+}
 .auth__heading {
   margin-top: 50px;
   font-size: 3rem;
@@ -2757,6 +2773,7 @@ html {
 @media (max-width: 767.98px) {
   .auth__heading {
     font-size: 2.2rem;
+    margin-top: 30px;
   }
 }
 .auth__desc {
@@ -2798,6 +2815,12 @@ html {
   gap: 30px;
   margin-top: 50px;
 }
+@media (max-width: 767.98px) {
+  .auth__btn-group {
+    gap: 20px;
+    margin-top: 35px;
+  }
+}
 .auth__btn {
   width: 100%;
 }
@@ -2809,6 +2832,7 @@ html {
 }
 @media (max-width: 767.98px) {
   .auth__text {
+    margin-top: 80px;
     font-size: 1.6rem;
   }
 }
