--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -8,6 +8,9 @@ $error-color: #ed4337;
 
   &__group {
     margin-top: 30px;
+    @include abstracts.screen(md) {
+      margin-top: 20px;
+    }
 
     &--inline {
       display: flex;
