--- a/scss/pages/_auth.scss
+++ b/scss/pages/_auth.scss
@@ -20,6 +20,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background: var(--auth-intro-bg);
     gap: 50px;
 
     &-logo,
@@ -77,6 +78,9 @@
       width: min(460px, 100%);
       margin: 0 auto;
       padding: 50px 0;
+      @include abstracts.screen(md) {
+        padding: 30px 0;
+      }
     }
   }
 
@@ -87,6 +91,7 @@
     line-height: 146.667%;
     @include abstracts.screen(md) {
       font-size: 2.2rem;
+      margin-top: 30px;
     }
   }
 
@@ -125,6 +130,10 @@
     flex-direction: column;
     gap: 30px;
     margin-top: 50px;
+    @include abstracts.screen(md) {
+      gap: 20px;
+      margin-top: 35px;
+    }
   }
 
   &__btn {
@@ -137,6 +146,7 @@
     font-size: 1.8rem;
     line-height: 144.444%;
     @include abstracts.screen(md) {
+      margin-top: 80px;
       font-size: 1.6rem;
     }
     &-link {
